--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="findButton">Найти</string>
     <string name="authorizeStatusTextView">TextView</string>
     <string name="loginButton">Войти</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
