--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,22 @@
 <resources>
     <string name="app_name">ОДС</string>
     <string name="addButton">Добавить мероприятие</string>
-    <string name="findButton">Найти</string>
+    <string name="findStudioButton">Найти студию</string>
+    <string name="findEventButton">Найти мероприятие</string>
     <string name="authorizeStatusTextView">TextView</string>
     <string name="loginButton">Войти</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="exit">Выход</string>
     <string name="ok">OK</string>
     <string name="error">OШИБКА</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 </resources>
