добавила новый пункт меню - выход из приложения

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,20 +3,21 @@
     <string name="addButton">Добавить мероприятие</string>
     <string name="findStudioButton">Найти студию</string>
     <string name="findEventButton">Найти мероприятие</string>
-    <string name="authorizeStatusTextView">TextView</string>
     <string name="loginButton">Войти</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="exit">Выход</string>
     <string name="ok">OK</string>
     <string name="error">OШИБКА</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="error_add_name_event">Введите название мероприятия</string>
+    <string name="error_add_description_event">Введите описания мероприятия</string>
+    <string name="error_add_lat_event">Введите координату широты</string>
+    <string name="error_add_lng_event">Введите координату долготы</string>
+    <string name="error_add_time_event">Выберите время проведения мероприятия</string>
+    <string name="error_add_date_event">Выберите дату проведения мероприятия</string>
+    <string name="error_add_big_name_event">Название мероприятия слишком большое</string>
+    <string name="error_add_big_description">Описание мероприятия слишком большое</string>
+    <string name="error_phone_number">Введите ваш номер телефона в формате: +7 (9ХХ) ХХХ-ХХ-ХХ</string>
 </resources>
